--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -319,6 +319,34 @@
                 </div>
             </div>
         </section>
+        <section class="feature-details feature3" id="americas">
+            <div class="container">
+                <div class="row">
+                    <div class="span5">
+                        <img src="static/img/bolivia.png" width="325" height="178" alt="bolivia" class="feature-img" />
+                    </div>
+                         <div class="span7 number thirteen">
+                             <div class="highlighted-box">
+                                <h2>Bolivia Geonode</strong></h2>
+                                <h4></h4>
+                                    <div>
+                                        <p>
+                                        Bolivia is using GeoNode to develop a Geographical Data Infrastructure for the National Information System for Risk Reduction, composed by science and specialised sectors in the areas of; Risk management, Geological Survey, National Statistics, Military Geographical Institute, Heath, Land, Water and education sectors. Each sector will have an instance of GeoNode, and all the be federated in one system  orchestrated by the Civil Defence Office. A few examples of Bolivia's instances are below:
+
+                                        <ul>
+                                            <li><a href= "http://geosinager.defensacivil.gob.bo/">http://geosinager.defensacivil.gob.bo/</a></li>
+                                            <li><a href= "http://georiesgos.sergeotecmin.gob.bo/">http://georiesgos.sergeotecmin.gob.bo/</a></li>
+                                            <li><a href= "http://geonode.igmbolivia.gob.bo/">http://geonode.igmbolivia.gob.bo/</a></li>
+                                            <li><a href= "http://mapas.senamhi.gob.bo/">http://mapas.senamhi.gob.bo/</a></li>
+                                            <li><a href= "http://geosinager.defensacivil.gob.bo/">http://geosinager.defensacivil.gob.bo/</a></li>
+                                        </ul>
+                                     </p>
+                                    </div>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </section>
         {% comment %}
 {% endcomment %}
 {% endblock content %}
