Update workshops page

--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Install — {{ block.super }} {% endblock %}
+{% block title %} Workshops — {{ block.super }} {% endblock %}
 
 {% block body_class %}geonode-features{% endblock %}
 
