--- a/workshops/index.html
+++ b/workshops/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="UTF-8">
-        <title> Install — GeoNode </title> 
+        <title> Workshops — GeoNode </title> 
         <link rel="shortcut icon" href="/static/img/favicon.ico" />
         <meta name='description' content='GeoNode'/>
         <meta name='keywords' content='GeoNode'/>
@@ -25,13 +25,14 @@
         <header class="main">
             <div class="container">
                 <div class="row">
-                    <div class="span6">
+                    <div class="span4">
                         <h1><a class="brand" href="/">GeoNode</a></h1>
                     </div>
-                    <div class="span6">
+                    <div class="span8">
                         <div>
-                            <a href="install.html" class="btn btn-success">Install GeoNode Now</a>
+                            <a href="/install.html" class="btn btn-success">Install GeoNode</a>
                             <a target="_blank" href="http://alpha.dev.geonode.org/" class="btn btn-warning">Try the Demo</a>
+                            <a href="/posts/" class="btn btn-success">Read our Blog</a>
                         </div>
                     </div>
                 </div>
@@ -39,6 +40,7 @@
         </header>
 		
 
+    
 	
         <section class="feature-detail">
             <div class="container">
@@ -62,6 +64,7 @@
             </div>
         </section>
 
+    
 
 	
 		 <footer class="footer">
