--- a/workshops/index.html
+++ b/workshops/index.html
@@ -17,7 +17,7 @@
 	
         <script type="text/javascript" src="/static/js/jquery.js"></script>
         <script type="text/javascript" src="/static/js/sequence.jquery-min.js"></script>
-		<script src="./static/js/main.js"></script>
+		<script src="../static/js/main.js"></script>
 	
     </head>
     <body class="geonode-features">
