--- a/pages/index.html
+++ b/pages/index.html
@@ -5,15 +5,13 @@
                 <div class="row">
                     <div class="span6">
                         <h1>Open Source Geospatial Content Management System</h1>
-                        <p>GeoNode is an easy to use application and platform
-                            for developing web based Geospatial Information
-                            Systems and for deploying interoperable Spatial
-                            Data Infrastructure.
+                        <p>
+                            GeoNode is a web-based application and platform 
+                            for developing geospatial information systems (GIS)
+                            and for deploying spatial data infrastructures (SDI).
                         </p>
                         <p>
-                            It is also designed to be a flexible platform that software
-                            developers can extend, modify or integrate against to meet
-                            requirements in their own applications.
+                            It is designed to be extended and modified, and can be integrated into existing platforms.
                         </p>
                         <!-- <a href="#" class="btn btn-large btn-success">GeoNode Now</a> -->
                     </div>
@@ -34,10 +32,10 @@
                                 </header>
                             </a>
                             <ul class="unstyled">
-                                <li>Browse and search for geospatial data layers and web services</li>
-                                <li>Upload, manage and share geospatial data</li>
+                                <li>Browse and search for geospatial data and web services</li>
+                                <li>Upload, manage, and share geospatial data</li>
                                 <li>Create and share interactive maps</li>
-                                <li>Collaborate with others using layers and maps</li>
+                                <li>Collaborate and interact with other users</li>
                             </ul>
                             <a href = "user_features.html" class="btn btn-success">Take the Tour</a>
                         </div>
@@ -51,9 +49,9 @@
                             </a>
                             <ul class="unstyled">
                                 <li>Developed with Django</li>
-                                <li>Built on stable, mature open source geospatial projects</li>
                                 <li>Twitter Bootstrap and jQuery client implementation</li>
-                                <li>Multiple APIs for customization and integration</li>
+                                <li>Built on stable, mature open source geospatial projects</li>
+                                <li>APIs for customization and connection</li>
                                 <li>Seamless integration with third-party Django apps</li>
                             </ul>
                             <a href = "dev_features.html" class="btn btn-success">Take the Tour</a>
@@ -67,10 +65,10 @@
                                 </header>
                             </a>
                             <ul class="unstyled">
-                                <li>Complete framework for OGC compliant geospatial web services</li>
-                                <li>Interoperable metadata managment and aggregation platform</li>
-                                <li>Comprehensive security model and framework</li>
-                                <li>Reliable and scalable platform for deploying spatial data infrastructure</li>
+                                <li>Reliable, scalable platform for deploying spatial data infrastructure</li>
+                                <li>Complete framework for OGC-compliant web services</li>
+                                <li>Metadata management and aggregation platform</li>
+                                <li>Comprehensive security framework</li>
                             </ul>
                             <a href = "admin_features.html" class="btn btn-success">Take the Tour</a>
                         </div>
@@ -122,19 +120,19 @@
                         <a href="http://docs.geonode.org/en/latest/index.html" target="_blank">
                             <article class="documentation">
                                 <h3>Documentation</h3>
-                                <p>User, Developer and Administrator Guides.</p>
+                                <p>Guides for users, developers, and administrators</p>
                             </article>
                         </a>
                         <a href="communication.html#mailing-lists">
                             <article class="mailing-list">
                                 <h3>Mailing Lists</h3>
-                                <p>User, Developer and Regional lists and archives.</p>
+                                <p>Discussion groups for users and developers</p>
                             </article>
                         </a>
                         <a href="https://github.com/GeoNode/geonode/issues" target="_blank">
                             <article class="issue-tracker">
                                 <h3>Issue Tracker</h3>
-                                <p>Bugs, Feature Requests, Milestones and Roadmap.</p>
+                                <p>Bugs, feature requests, and development roadmap</p>
                             </article>
                         </a>
                     </div>
@@ -142,19 +140,19 @@
                         <a href="faqs.html">
                             <article class="faqs">
                                 <h3>FAQs</h3>
-                                <p>Frequently Asked Questions about GeoNode.</p>
+                                <p>Frequently Asked Questions about GeoNode</p>
                             </article>
                         </a>
                         <a href="communication.html#irc">
                             <article class="irc">
                                 <h3>IRC</h3>
-                                <p>#geonode on freenode.net Real-time discussion and help.</p>
+                                <p>Real-time discussion and help at #geonode on freenode.net</p>
                             </article>
                         </a>
                         <a href="gallery.html">
                             <article class="sites-gallery">
-                                <h3>Sites Gallery</h3>
-                                <p>A collection of sites implemented using GeoNode</p>
+                                <h3>Gallery</h3>
+                                <p>A collection of live sites built using GeoNode</p>
                             </article>
                         </a>
                     </div>
