--- a/pages/user_features.html
+++ b/pages/user_features.html
@@ -10,11 +10,11 @@
                 <div class="row">
                     <div class="span6">
                         <h1>
-                            <strong>Hello User</strong>,<br />
-                            <span>Learn more about the user features of <strong>GeoNode</strong>, a complete web mapping solution.</span>
+                            <strong>For Users</strong><br />
+                            <span>Learn more about the features of <strong>GeoNode</strong>.</span>
 	                </h1>
                         <div>
-                            <a href="/workshops/user/" class="btn btn-success" target="_blank">Follow our <strong>Users Workshop</strong></a>
+                            <a href="/workshops/user/" class="btn btn-success" target="_blank">Follow the <strong>Users Workshop</strong></a>
                         </div>
                     </div>
                     <div class="span6">
@@ -30,7 +30,7 @@
                         <nav class="subnav">
                             <h5>Features:</h5>
                             <ul class="unstyled" id="subnav">
-                                <li><a href="#explore"><strong>Explore and Discover</strong></a></li>
+                                <li><a href="#discover"><strong>Spatial Data Discovery</strong></a></li>
                                 <li><a href="#import"><strong>Import and Manage</strong></a></li>
                                 <li><a href="#mapping"><strong>Interactive Mapping</strong></a></li>
                                 <li><a href="#collaboration"><strong>Collaboration</strong></a></li>
@@ -52,18 +52,18 @@
                             <h2>Spatial Data Discovery</h2>
                             <h4>Browse and search for geospatial data</h4>
                             <div>
-                                <p>By enabling the kind of collaboration that has previously been limited to social networks and combining it with specialized geospatial tools, GeoNode makes it easy to explore, discover, process, style, combine and share geospatial data and maps.</p>
-							    <p>By providing a non-technical user focused experience, spatial datasets can be easily imported and shared publicly or restricted to allow access to only specific users or groups.</p><p>
+                                <p>By combining collaboration found in social networks with specialized geospatial tools, GeoNode makes it easy to explore, process, style, and share maps and geospatial data.</p>
+							    <p>Spatial datasets can be imported and shared, all through a non-technical user interface.</p><p>
 							    Features include:
 							    </p>
 							</div>
 
 							                            <ul class="unstyled">
-							                                <li>Powerful Spatial Search Engine</li>
-							                                <li>Federated OGC Servers</li>
-							                                <li>Metadata Catalogue</li>
+							                                <li>Powerful spatial search engine</li>
+							                                <li>Federated OGC services</li>
+							                                <li>Metadata catalogue</li>
 							                            </ul>
- <a href="explore_discover.html" class="hide btn btn-success">Learn about GeoNode's Discovery Features</a>
+ <a href="explore_discover.html" class="hide btn btn-success">Learn about GeoNode's discovery features</a>
                         </div>
                     </div>
                 </div>
@@ -74,24 +74,24 @@
                 <div class="row">
                     <div class="span7 number two">
                         <div class="highlighted-box">
-                            <h2>Import & Manage</strong></h2>
-                            <h4>Upload and securely share geospatial data</h4>
-                          <div>
-					                            	 <p>
-					                            	 GeoNode makes it easy to upload and manage spatial data layers on the web. Any user can upload data layers and make them available via OGC services. Data Layers are available for browsing, searching, styling, processing and combining to make maps that can be shared with specific users or publicly.</p>
-					                            	 <p>Supported upload formats include Shapefiles, GeoTiffs, KML and CSV. Your GeoNode administrator can also help you connect to existing spatial databases, services and specialized raster and vector formats.
-					                            	 </p><p>Features include:
-					                            	</p>
-					                            </div>
+                            <h2>Import and Manage</strong></h2>
+                            <h4>Upload and share geospatial data, securely</h4>
+                            <div>
+                            	<p>
+                            	GeoNode makes it easy to upload and manage geospatial data on the web. Any user can upload  and make content available via standard OGC protocols such as Web Map Service (WMS) and Web Feature Service (WFS). Data is available for browsing, searching, styling, and processing to generate maps which can be shared publicly or restricted to specific users only.</p>
+                            	<p>Supported upload formats include shapefile, GeoTIFF, KML and CSV. In addition, it is possible to connect to existing external spatial databases and services.
+                            	</p><p>Features include:
+					            </p>
+					        </div>
 
 					                            <ul class="unstyled">
-					                                <li>Import and publish raster, vector and tabular data</li>
-					                                <li>Manage layers Metadata and associated Documents</li>
-					                                <li>Securely or Publicly Share data</li>
-					                                <li>GIS Data Editor (versioning)</li>
+					                                <li>Publish raster, vector, and tabular data</li>
+					                                <li>Manage metadata and associated documents</li>
+					                                <li>Securely or publicly share data</li>
+					                                <li>Versioned geospatial data editor</li>
 
 					                            </ul>
-                            <a href="import_manage.html" class="hide btn btn-success">Learn about GeoNode's Data Management Features</a>
+                            <a href="import_manage.html" class="hide btn btn-success">Learn about GeoNode's data management features</a>
                         </div>
                     </div>
                     <div class="span5">
@@ -110,45 +110,46 @@
                     <div class="span7 number three">
                         <div class="highlighted-box">
                             <h2>Interactive Mapping</strong></h2>
-                            <h4>Create and Share Interactive Web Maps</h4>
+                            <h4>Create and share interactive web maps</h4>
                          
 								<div>
-									<p>GeoNode comes with helpful cartography tools for styling and composing maps through the web. These tools make it easy for anyone to assemble a browser based mapping application with functionality traditionally found in the desktop GIS world.</p>
-									<p>Users can add and style, style and publish layers with ease. By leveraging GeoExplorer users gain enhanced interactivity with GIS specific tools like identify, query, measure, create feature, and more.
-									<p></p>Features include:
+									<p>GeoNode comes with helpful cartography tools for styling and composing maps graphically. These tools make it easy for anyone to assemble a web-based mapping application with functionality traditionally found in desktop GIS applications.</p>
+									<p>Users can gain enhanced interactivity with GIS-specific tools such as querying and measuring.
+									</p><p>Features include:
 									</p>
 								</div>
 	   <ul class="unstyled">
-                                <li>GeoExplorer GIS Client</li>
-                                <li>Interactively Style Editor</li>
-                                <li>Create multi-layer and service maps</li>
-                                <li>Share and embed interactive maps</li>
+                                <li>GeoExplorer GIS client</li>
+                                <li>Graphical style editor</li>
+                                <li>Create multi-layer interactive maps</li>
+                                <li>Share and embed maps in web pages</li>
                             </ul>
-                            <a href="mapping.html" class="hide btn btn-success">Learn about GeoNode's Mapping Features</a>
+                            <a href="mapping.html" class="hide btn btn-success">Learn about GeoNode's mapping features</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="feature-details feature2" id="collaboration">
+        <section class="feature-details feature4" id="collaboration">
             <div class="container">
                 <div class="row">
                     <div class="span7 number four">
                         <div class="highlighted-box">
                             <h2>Collaboration</strong></h2>
-                            <h4>Social & Collaborative features</h4>
+                            <h4>Social features and collaboration</h4>
 							<div>
-								<p>GeoNode is all about collaboration. With feature-rich web-based editing and map styling, easy data sharing, and OGC-compliant service endpoints, GeoNode enables the kind of collaboration that has previously been limited to social networks and specialized geospatial tools.</p>
-								<p>GeoNode is designed to share data simply and easily through crating collaborating. <br>Features include: 	
+								<p>GeoNode is about collaboration. With easy data sharing and OGC-compliant service endpoints, GeoNode enables the kind of collaboration that has previously been limited to social networks.</p>
+								<p>GeoNode is designed to share data simply and easily.
+                                </p><p>Features include: 	
 								</p>
 							</div>
                             <ul class="unstyled">
-                                <li>Review, rate, and comment</li>
-                                <li>User groups</li>
-                                <li>Activity stream</li>
+                                <li>Review, rate, and comment on data</li>
+                                <li>Groups of users</li>
+                                <li>Activity streams</li>
                                 <li>Announcements and notifications</li>
                             </ul>
-                            <a href="collaboration.html" class="hide btn btn-success">Learn about GeoNode's Collaboration Features</a>
+                            <a href="collaboration.html" class="hide btn btn-success">Learn about GeoNode's collaboration features</a>
                         </div>
                     </div>
                     <div class="span5">
