--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                     <div class="num">1</div>
                                     <h6>Install from PPA in Ubuntu 12.04</h6>
                                     <span class="mono">
-                                    <p>$ sudo add-apt-repository ppa:geonode/snapshots</p>
+                                    <p>$ sudo add-apt-repository ppa:geonode/testing</p>
                                     <p>$ sudo apt-get update</p>
                                     <p>$ sudo apt-get install geonode</p>
                                     </span>
