--- a/dev_features.html
+++ b/dev_features.html
@@ -69,11 +69,11 @@
                 <div class="row">
                     <div class="span6">
                         <h1>
-                            <strong>Hello Developer</strong>,<br />
+                            <strong>For Developers</strong>,<br />
                             <span>Learn more about the powerful development features of <strong>GeoNode</strong>.</span>
                         </h1>
                         <div>
-                            <a href="workshops/devel/" class="btn btn-success" target = "_blank">Follow the <strong>Developer Workshop</strong></a>
+                            <a href="workshops/devel/" class="btn btn-success" target = "_blank">Follow the <strong>Developers Workshop</strong></a>
                         </div>
                     </div>
                     <div class="span6">
@@ -100,7 +100,7 @@
                 </div>
             </div>
         </section>
-        <section class="feature-details" id="osgeo">
+        <section class="feature-details feature1" id="osgeo">
             <div class="container">
                 <div class="row">
                     <div class="span5">
@@ -111,19 +111,18 @@
                             <h2>Open Source Geospatial</strong></h2>
                             <h4>Open from top to bottom</h4>
 							<div>
-							<p>GeoNode is built upon a platform of proven open source components including Django, GeoServer, pycsw, OpenLayers and GeoExt. GeoNode implements many Open Geospatial Consortium (OGC) standards, including WMS, WFS, WCS, KML, and CSW. GeoNode development also contributes to the underlying open source projects and software libraries.
-							</br>Components include: 
+							<p>GeoNode is built upon a platform of proven open source components including Django, GeoServer, pycsw, OpenLayers and GeoExt. GeoNode implements many Open Geospatial Consortium (OGC) standards, including Web Map Service (WMS), Web Feature Service (WFS), Web Coverage Service (WCS), KML, and Catalog Service for Web (CSW). GeoNode development also contributes to the underlying open source projects and software libraries.</p>
+							<p>Features include: 
 							</p>
 							</div>
                             <ul class="unstyled">
-
                                 <li>PostGIS Spatial Databases</li>
                                 <li>GeoServer OGC Services</li>
-                                <li>pycsw CSW Metadata Catalogue</li>
+                                <li>pycsw CSW Metadata Catalog</li>
                                 <li>Geospatial Python libraries</li>
                                 <li>OpenLayers and GeoExt Web Mapping Libraries</li>
                             </ul>
-                            <a href="opensource_geospatial.html" class="hide btn btn-success">Learn about GeoNode's Open Source Geospatial Foundation</a>
+                            <a href="opensource_geospatial.html" class="hide btn btn-success">Learn about GeoNode's open source geospatial foundation</a>
                         </div>
                     </div>
                 </div>
@@ -138,19 +137,20 @@
                             <h4>Built for the web</h4>
                             <ul class="unstyled">
 							<div>
-								<p>GeoNode leverages the Django web Framework, offering a friendly and extensible environment for web developers accustomed to using any modern MVC web framework. In contrast with many geospatial tools which force web developers to adapt to a "GIS" specific stack, GeoNode and Django offer a framework on which developers can build Geospatial web applications using tools they are already comfortable and familiar with.</p>
+								<p>GeoNode leverages the Django web framework, offering a friendly and extensible environment for web developers accustomed to using any modern MVC web framework. In contrast with many geospatial tools which force web developers to adapt to a GIS context, GeoNode and Django offer a framework on which developers can build geospatial web applications in a familiar environment.</p>
 								<p>
-								Django brings its large user base and ecosystem of apps, making it easy to develop modern, social websites.</p>
+								Django has a large user base and ecosystem of apps, making it easy to develop websites focused on users and collaboration.</p>
                                 <p>
 								Features Include: 	
 								</p>
 							</div>
-                                <li>Modern, high productivity web framework</li>
+                            <ul class="unstyled">
+                                <li>Modern web framework</li>
                                 <li>Pluggable GeoNode Django apps</li>
-                                <li>Deployable Template GeoNode projects</li>
-                                <li>Integrated Admin Interface</li>
-                                <li>Large ecosystem of third-party pluggable apps</li>
-                                <li>Spatial GeoDjango ORM Available</li>
+                                <li>Deployable template projects</li>
+                                <li>Integrated admin interface</li>
+                                <li>Large ecosystem of pluggable apps</li>
+                                <li>Spatial GeoDjango object-relational mapping available</li>
                             </ul>
                             <a href="django.html" class="hide btn btn-success">Learn about GeoNode's pluggable Django apps and deployable projects</a>
                         </div>
@@ -170,18 +170,17 @@
                     <div class="span7 number three">
                         <div class="highlighted-box">
                             <h2>Bootstrap and jQuery</strong></h2>
-                            <h4>Modern and flexible web front-end</h4>
-                            <p>GeoNode's front end is based on the popular and flexible jQuery and Bootstrap frameworks. A set of jQuery javascript plugins is used to drive the interactive and responsive user interface, and Bootstrap css is used to style the pages. Both of these frameworks make it easy theme and customize your own GeoNode implementation and since both are widely used in other projects, integration is frictionless.
-						<div>
+                            <h4>Modern and flexible front-end</h4>
+                            <p>GeoNode's front-end is based on the popular and flexible jQuery and Bootstrap frameworks. A set of jQuery JavaScript plugins is used to drive the user interface, and Bootstrap CSS is used to style the pages. Both of these frameworks make it easy to theme and customize your own GeoNode implementation if desired.</p>
 							<p>
-							</br>Features include: 	
+							Features include: 	
 							</p>
-						<div>
+						</div>
                             <ul class="unstyled">
-                                <li>Bootstrap CSS Framework</li>
-                                <li>jQuery javascript front end and plugins</li>
+                                <li>Bootstrap CSS framework</li>
+                                <li>jQuery JavaScript front-end and plugins</li>
                                 <li>Django templating system</li>
-                                <li>Themable with lessc and bootswatch</li>
+                                <li>Customizable themes using LESS and Bootswatch</li>
                             </ul>
                             <a href="bootstrap_jquery.html" class="hide btn btn-success">Learn about GeoNode's Front End</a>
                         </div>
@@ -189,7 +188,7 @@
                 </div>
             </div>
         </section>
-        <section class="feature-details feature2" id="apis">
+        <section class="feature-details feature4" id="apis">
             <div class="container">
                 <div class="row">
                     <div class="span7 number two">
@@ -197,15 +196,14 @@
                             <h2>APIs<strong></h2>
                             <h4>Integrate easily</h4>
 						<div>
-							<p>Because of it's solid foundation in open source GeoNode supports multiple points for application integration. 
+							<p>GeoNode supports multiple points for application integration. 
 							</br>Features include: 
 							</p>
 						</div>
                             <ul class="unstyled">
-                                <li>OGC Compliant Web Services</li>
+                                <li>OGC-compliant web services</li>
                                 <li>GeoServer REST API</li>
-                                <li>GeoNode Search and REST APIs</li>
-                                <li>Tile Map Service (TMS)</li>
+                                <li>GeoNode search and REST APIs</li>
                             </ul>
                             <a href="apis.html" class="hide btn btn-success">Learn about GeoNode's APIs</a>
                         </div>
@@ -216,7 +214,7 @@
                 </div>
             </div>
         </section>
-        <section class="feature-details feature3" id="interoperability">
+        <section class="feature-details feature5" id="interoperability">
             <div class="container">
                 <div class="row">
                     <div class="span5">
@@ -225,20 +223,20 @@
                     <div class="span7 number three">
                         <div class="highlighted-box">
                             <h2>Interoperability</strong></h2>
-                            <h4>GeoNode plays well with others</h4>
+                            <h4>Plays well with others</h4>
 						<div>
-							<p>GeoNode is not only a geospatial platform, it's a social one. GeoNode's foundational components make it easy to interoperate with other GeoNodes and OGC Services as well as with many other popular social services and tools. 
+							<p>GeoNode is a social platform. GeoNode's foundational components make it easy to interact with other GeoNode deployments, external OGC services as well as with many other popular social services and tools.
 							</br>	
 							</p>
 						</div>
                             <ul class="unstyled">
-                                <li>Federates with other GeoNode's</li>
-                                <li>Federates with other OGC Compliant SDI (CSW/WMS)</li>
-                                <li>Federates with other Open Data Platforms (ckan, junar, socrata)</li>
-                                <li>Integrates with other Social Services & Platforms (Twitter, Facebook, Google+, LinkedIn, Jive, Telligent)</li>
-                                <li>Integrates with other CMS (Wordpress, Drupal)</li>
+                                <li>Connects with other GeoNode deployments</li>
+                                <li>Interacts with OGC-compliant SDIs</li>
+                                <li>Federates with open data platforms (ckan, junar, socrata)</li>
+                                <li>Integrates with other social networking platforms (Twitter, Facebook, Google+, LinkedIn, Jive, Telligent)</li>
+                                <li>Integrates with other content management systems (WordPress, Drupal)</li>
                             </ul>
-                            <a href="interoperability.html" class="hide btn btn-success">Learn more about Interoperability with External systems</a>
+                            <a href="interoperability.html" class="hide btn btn-success">Learn more about interoperability with external systems</a>
                         </div>
                     </div>
                 </div>
