Added link to install section instead of a new page

--- a/pages/index.html
+++ b/pages/index.html
@@ -85,7 +85,7 @@
                 <h2 class="quick-start">Quick Start</h2>
             </div>
             <div class="span11">
-                        <div class="get-started">
+                        <div class="get-started" id="install">
                             <h2>Get Started Now</h2>
                             <ul class="unstyled steps">
                                 <li>
