--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                     <div class="span9">
                         <div class="pull-right">
-                            <a href="/install.html" class="btn btn-success">Install GeoNode</a>
+                            <a href="/#install" class="btn btn-success">Install GeoNode</a>
                             <a target="_blank" href="http://alpha.dev.geonode.org/" class="btn btn-warning">Try the Demo</a>
                             <a href="/posts/" class="btn btn-success">Read our Blog</a>
                         </div>
@@ -153,7 +153,7 @@
                 <h2 class="quick-start">Quick Start</h2>
             </div>
             <div class="span11">
-                        <div class="get-started">
+                        <div class="get-started" id="install">
                             <h2>Get Started Now</h2>
                             <ul class="unstyled steps">
                                 <li>
