Fix gallery stuff

--- a/pages/index.html
+++ b/pages/index.html
@@ -149,7 +149,7 @@
                                 <p>Real-time discussion and help at #geonode on freenode.net</p>
                             </article>
                         </a>
-                        <a href="gallery.html">
+                        <a href="/gallery/">
                             <article class="sites-gallery">
                                 <h3>Gallery</h3>
                                 <p>A collection of live sites built using GeoNode</p>
