--- a/pages/gallery/index.html
+++ b/pages/gallery/index.html
@@ -16,7 +16,7 @@
                     
                     </div>
                     <div class="span6">
-                        <img src="static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
+                        <img src="../static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
                     </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <a href="http://geonode.ithacaweb.org"><img src="static/img/cosa.png" width="325" height="189" alt="cosa" class="feature-img" /></a>
+                        <a href="http://geonode.ithacaweb.org"><img src="../static/img/cosa.png" width="325" height="189" alt="cosa" class="feature-img" /></a>
                     </div>
                    	 <div class="span7 number one">
                        	      <div class="highlighted-box">
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <a href= "http://23.22.63.123"><img src="static/img/masdap.png" width="325" height="189" alt="MASDAP" class="feature-img" /></a>
+                        <a href= "http://23.22.63.123"><img src="../static/img/masdap.png" width="325" height="189" alt="MASDAP" class="feature-img" /></a>
                     </div>
                 </div>
             </div>
@@ -90,7 +90,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <a href= "http://geonode.wfp.org"><img src="static/img/wfp.png" width="325" height="189" alt="Iphone Geonode" class="feature-img" /></a>
+                        <a href= "http://geonode.wfp.org"><img src="../static/img/wfp.png" width="325" height="189" alt="Iphone Geonode" class="feature-img" /></a>
                     </div>
                          <div class="span7 number three">
                              <div class="highlighted-box">
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                          <div class="span5">
-                        <a href= "http://www.montagneaperte.it"><img src="static/img/montagne.png" width="325" height="189" alt="montagneAperte" class="feature-img" /></a>
+                        <a href= "http://www.montagneaperte.it"><img src="../static/img/montagne.png" width="325" height="189" alt="montagneAperte" class="feature-img" /></a>
                     </div>
                 </div>
             </div>
@@ -131,7 +131,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <a href= "http://cariska.mona.uwi.edu"><img src="static/img/cariska.png" width="325" height="189" alt="cariska" class="feature-img" /></a>
+                        <a href= "http://cariska.mona.uwi.edu"><img src="../static/img/cariska.png" width="325" height="189" alt="cariska" class="feature-img" /></a>
                     </div>
                          <div class="span7 number five">
                              <div class="highlighted-box">
@@ -166,7 +166,7 @@
                             </div>
                         </div>
                          <div class="span5">
-                        <a href= "http://www.montagneaperte.it"><img src="static/img/kenya.png" width="325" height="189" alt="kenya" class="feature-img" /></a>
+                        <a href= "http://www.montagneaperte.it"><img src="../static/img/kenya.png" width="325" height="189" alt="kenya" class="feature-img" /></a>
                     </div>
                 </div>
             </div>
@@ -175,7 +175,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <a href= "http://moz-adapt.org/"><img src="static/img/moz.png" width="325" height="243" alt="moz" class="feature-img" /></a>
+                        <a href= "http://moz-adapt.org/"><img src="../static/img/moz.png" width="325" height="243" alt="moz" class="feature-img" /></a>
                     </div>
                          <div class="span7 number seven">
                              <div class="highlighted-box">
@@ -219,7 +219,7 @@
                             </div>
                         </div>
                          <div class="span5">
-                        <a href= "yemen.rcdrrdri.org"><img src="static/img/yemen.png" width="325" height="273" alt="yemen" class="feature-img" /></a>
+                        <a href= "yemen.rcdrrdri.org"><img src="../static/img/yemen.png" width="325" height="273" alt="yemen" class="feature-img" /></a>
                     </div>
                 </div>
             </div>
@@ -228,7 +228,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <a href= "http://paris.sopac.org"><img src="static/img/paris.png" width="325" height="262" alt="paris" class="feature-img" /></a>
+                        <a href= "http://paris.sopac.org"><img src="../static/img/paris.png" width="325" height="262" alt="paris" class="feature-img" /></a>
                     </div>
                          <div class="span7 number nine">
                              <div class="highlighted-box">
@@ -272,7 +272,7 @@
                             </div>
                         </div>
                          <div class="span5">
-                        <a href= "http://haitidata.org"><img src="static/img/haiti.png" width="325" height="222" alt="haitidata" class="feature-img" /></a>
+                        <a href= "http://haitidata.org"><img src="../static/img/haiti.png" width="325" height="222" alt="haitidata" class="feature-img" /></a>
                     </div>
                 </div>
             </div>
@@ -281,7 +281,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <a href= "http://geonode.gov.vc"><img src="static/img/vincent.png" width="325" height="178" alt="vincent" class="feature-img" /></a>
+                        <a href= "http://geonode.gov.vc"><img src="../static/img/vincent.png" width="325" height="178" alt="vincent" class="feature-img" /></a>
                     </div>
                          <div class="span7 number eleven">
                              <div class="highlighted-box">
@@ -314,7 +314,7 @@
                             </div>
                         </div>
                          <div class="span5">
-                        <a href= "http://www.golfgis.com"><img src="static/img/golf.png" width="325" height="225" alt="golf" class="feature-img" /></a>
+                        <a href= "http://www.golfgis.com"><img src="../static/img/golf.png" width="325" height="225" alt="golf" class="feature-img" /></a>
                     </div>
                 </div>
             </div>
@@ -323,7 +323,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/bolivia.png" width="325" height="178" alt="bolivia" class="feature-img" />
+                        <img src="../static/img/bolivia.png" width="325" height="178" alt="bolivia" class="feature-img" />
                     </div>
                          <div class="span7 number thirteen">
                              <div class="highlighted-box">
@@ -363,7 +363,7 @@
                             </div>
                         </div>
                          <div class="span5">
-                        <a href= "http://www.mapstory.org"><img src="static/img/mapstory.png" width="325" height="187" alt="mapstory" class="feature-img" /></a>
+                        <a href= "http://www.mapstory.org"><img src="../static/img/mapstory.png" width="325" height="187" alt="mapstory" class="feature-img" /></a>
                     </div>
                 </div>
             </div>
@@ -372,7 +372,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <a href= "http://cigno.ve.ismar.cnr.it/"><img src="static/img/cigno.png" width="325" height="178" alt="vincent" class="feature-img" /></a>
+                        <a href= "http://cigno.ve.ismar.cnr.it/"><img src="../static/img/cigno.png" width="325" height="178" alt="vincent" class="feature-img" /></a>
                     </div>
                          <div class="span7 number fifteen">
                              <div class="highlighted-box">
